--- a/Docker/Dockerfile-hdf5
+++ b/Docker/Dockerfile-hdf5
@@ -4,4 +4,4 @@ FROM python:2.7-stretch
 # Install things
 RUN apt-get update
 RUN apt-get -y install python2.7-dev
-RUN apt-get -y install libhdf5-devcd
+RUN apt-get -y install libhdf5-dev
